ft:manage password
