# src/routes/api/userRoutes.js
@@ -1,10 +1,15 @@
 import express from "express";
 import userValidation from "../../validations/userValidation";
 import userController from "../../controllers/userController";
+import { protect } from "../../middlewares/protectRoute";
 const userRouter = express.Router();
 
 userRouter.post("/register", userValidation, userController.register);
 userRouter.post("/login", userController.login);
+userRouter.patch("/logout", protect, userController.userLogout);
+userRouter.patch("/change-password", protect, userController.userChangePassword);
+userRouter.post("/forgot-password", userController.userForgotPassword);
+userRouter.patch("/reset-password/:token", userController.userResetPassword);
 userRouter.get("/", userController.allUsers);
 
 userRouter
@@ -12,6 +17,5 @@ userRouter
   .get(userController.userById)
   .patch(userController.userUpdate)
   .delete(userController.userDelete);
-// route.post('/login', userControllers.login)
 
 export default userRouter;
